[tool.poetry]
name = "cassandra-rag"
version = "0.1.0"
description = ""
authors = ["Rohan Selva-Radov <33783348+selvaradov@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "0.2.0"
langchain-community = "^0.3.0"
langchain-chroma = "^0.1.4"
python-dotenv = "^1.0.1"
quart = "^0.19.6"
quart-cors = "^0.7.0"
pandas = "^2.2.2"
lark = "^1.2.2"
aiosqlite = "^0.20.0"
streamlit = "^1.38.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
langchain-postgres = "^0.0.12"
asyncpg = "^0.29.0"
langchain-anthropic = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
